# MaxOS

./: CMakeLists.txt  CREDITS.md  Makefile  README.md  build.sh  floppy.img  test_os.sh
bootloader/: boot.asm  gdt.asm  ppstring.asm  println.asm  pstring.asm  switchpm.asm
kernel/: kernel.c  link.ld
